# PhenoCamSnow

./: .gitignore  CITATION.cff  LICENSE  PhenoCamResNet.ipynb  README.md  best_canadaojp_model_path.txt  best_model_paths.csv  best_vindeln2_model_path.txt  binary_entropy.py  check_dist.py  clusters_201601.csv  clusters_201605.csv  clusters_201607.csv  clusters_201611.csv  clusters_201701.csv  entropy.csv  env-full.yml  env-short.yml  env.yml  label_data.py  mlp.py  model.joblib  my_labels.csv  pl_model.py  preclassifier.py  predict.py  progress_bar.py  pyproject.toml  quantize_images.py  ratios_201601.csv  ratios_201605.csv  ratios_201607.csv  ratios_201611.csv  ratios_201701.csv  results.csv  results0.csv  run_classifier.py  sample_clusters_small.csv  sat_classifier.py  sat_meanvar.csv  (+8 more)
.github/workflows/: ci.yaml
canadaOBS/: annotations.csv
canadaOBS_test/: annotations.csv  predictions.csv
canadaOBS_train/: annotations.csv
canadaojp/: annotations.csv
canadaojp_test/: annotations.csv
canadaojp_train/: annotations.csv
classification_data/: README.md
classification_data/2016/: results201601.csv  results201602.csv  results201603.csv  results201604.csv  results201605.csv  results201606.csv  results201607.csv  results201608.csv  results201609.csv  results201610.csv  results201611.csv  results201612.csv
classification_data/2017/: results201701.csv  results201702.csv  results201703.csv  results201704.csv  results201705.csv  results201706.csv
csv/: clusters_201601.csv  clusters_201605.csv  contrast_labels.csv  eval_labels.csv  img_features.csv  sample_clusters.csv  sample_clusters8.csv  sample_labels.csv  sat_features.csv  train_labels.csv
csv/labels_by_month/: labels01.csv  labels05.csv  labels09.csv
csv/sat_clf/: labels.csv
csv/snow_clf/: diff.csv  diff2.csv  eval_labels.csv  features.csv  labels.csv
docs/source/: conf.py  index.rst
docs/source/reference/: data.rst  model.rst  predict.rst  train.rst  utils.rst
docs/source/user-guide/: predict.rst  train.rst
images/: labels.csv  results.csv  sat_predictions.csv  snow_predictions.csv
models/: clf.joblib  model.joblib  sat_clf.joblib  snow_clf.joblib
notebooks/: quickstart.ipynb
predictions/: README.md  image2timestamp.py  snow2016.csv  snow2017.csv  snow2018.csv  snow2019.csv
src/phenocam-snow/: utils.py
src/phenocam_snow/: __init__.py  data.py  download.py  get_all_images.py  model.py  predict.py  train.py  utils.py
tests/: utils_test.py
utils/: errors.py  label_data.py  progress_bar.py  quantize_images.py  sat_meanvar.py  validate_args.py
vindeln2_test/: annotations.csv  predictions.csv
vindeln2_train/: annotations.csv
