[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phenocam-snow"
version = "0.0.1"
authors = [
    { name = "Jason Jewik", email = "jason.jewik@cs.ucla.edu" }
]
description = "Pipeline for building deep learning models to classify PhenoCam images."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [        
    "pytorch_lightning>=1.4.0, <=1.9.5", 
    "numpy",
    "pandas>=1.3.1, <=1.3.5",
    "pillow>=8.3.1, <=9.5.0",
    "rich",
    "torchmetrics>=0.10.0, <=0.11.4",
    "torchvision>=0.8.1, <=0.14.1",
    "tensorboard"
]

[project.optional-dependencies]
jupyter = [
    "jupyter",
    "jupyterlab"
]
dev = [
    "black>=23.1.0",    
    "flake8>=3.9.2",
    "pytest>=7.2.1",
]
docs = [
    "ipython>=7.34.0",
    "nbsphinx>=0.8.12",
    "sphinx>=5.3.0",
    "sphinx_rtd_theme>=1.1.1"
]

[project.urls]
"Source" = "https://github.com/jasonjewik/PhenoCamSnowClassifier"
"Issue Tracker" = "https://github.com/jasonjewik/PhenoCamSnowClassifier/issues"
"Documentation" = "https://phenocamsnow.readthedocs.io/en/latest/"